

# set the include path found by configure
INCLUDES = -I$(top_srcdir)/lib -I$(top_srcdir)/panel \
	-I$(top_srcdir)/panel/common -I$(top_srcdir)/panel/vfs -I$(top_srcdir)/panel/vfs/ftp \
	-I$(top_srcdir)/src -I$(top_srcdir)/src/ncurses $(all_includes)

# the library search path.


SUBDIRS = ncurses


